# CIIC4050

./: README.md  c_environment.script_exam.sh
.cache/clangd/index/: cosine_series.c.7C7AF7428F79C29B.idx  cosine_series.h.64E1425F5D70845A.idx  main.c.7594FF21EB69334A.idx
Exam2Presentations/: memory lecture 11
FinalExam/binary_files_intro/src/: main.c
FinalExam/binary_files_large_read/src/: main.c
FinalExam/binary_files_large_write/src/: main.c
FinalExam/files_copy_fopen/src/: main.c
FinalExam/files_copy_open/src/: main.c
FinalExam/files_fopen_big/src/: main.c
FinalExam/files_mmap/src/: main.c
FinalExam/files_mmap_big/src/: main.c
FinalExam/files_open/: CMakeLists.txt
FinalExam/files_open/src/: main.c
FinalExam/lab5_coded_image/: CMakeLists.txt
FinalExam/lab5_coded_image/og_solution/: CMakeLists.txt
FinalExam/lab5_coded_image/og_solution/include/: DecodeBinaryToCSV.h
FinalExam/lab5_coded_image/og_solution/src/: DecodeBinaryToCSV.c  main.c
FinalExam/lab5_coded_image/src/: main.c
InitialSetup/: CMakeLists.txt
InitialSetup/src/: hello.c  main.c
Lab1/Exercise1/include/: cosine_series.h
Lab1/Exercise1/src/: cosine_series.c  main.c
Lab1/Exercise2/: CMakeLists.txt
Lab1/Exercise2/src/: fill_date.c  main.c
Lab1/Exercise3/: CMakeLists.txt
Lab1/Exercise3/include/: fill_date_struct.h
Lab1/Exercise3/src/: fill_date_struct.c  main.c
Lab1/Exercise4/: CMakeLists.txt
Lab1/Exercise4/src/: main.c  print_arrays.c  upper_rand.c
Lab1AtLab/: CMakeLists.txt
Lab1AtLab/src/: main.c
Lab2/P1/ask_user/: CMakeLists.txt
Lab2/P2/process_b/: CMakeLists.txt
Lab2AtLab/clock_plot/: CMakeLists.txt
Lab2AtLab/synchronizer/src/: main.c
Lab2_Practice/MQ_SEND/src/: main.c
Lab4Practice/semaphore_receive/include/: semaphore_receive.h
Lab4Practice/semaphore_receive/src/: main.c
Lab4Practice/semaphore_send/: CMakeLists.txt
Labs/Lab1/Exercise1/: CMakeLists.txt
Labs/Lab1/Exercise1/src/: main.c
Labs/Lab2/P1/word_explorer/: CMakeLists.txt
Labs/Lab2/P1/word_explorer/include/: ExploreDirectory.h
Labs/Lab2/P1/word_explorer/src/: ExploreDirectory.c  main.c
Labs/Lab2_Practice/MQ_RECEIVE/: CMakeLists.txt
Labs/Lab2_Practice/MQ_RECEIVE/src/: main.c
Labs/Lab4Practice/semaphore_receive/: CMakeLists.txt
Labs/Lab4Practice/semaphore_receive/src/: semaphore_receive.c
SharedMemoryPractice/shared_memory/: c_environment_script_exam.sh
SignalPractice/create_proc_then_term/: CMakeLists.txt
SignalPractice/printing_args/: CMakeLists.txt
SignalPractice/respond_to_signal/: CMakeLists.txt
SignalPractice/send_signals/: CMakeLists.txt
exam1/: examReview.md
message_queues_basic/mq_receive/: CMakeLists.txt
shared_memory/process_b/: CMakeLists.txt
(+38 files in other folders)
